# mini-horta

./: .gitignore  Cargo.toml  README.md  horta.db  horta.db-shm  mini-horta.ino
migrations/: 001_initial_schema.sql  002_hortas.sql  003_luz_historico.sql  004_luz_horas_dia.sql  005_plant_luz_status.sql  006_plant_umidade_status.sql  007_luz_cooldown.sql  008_log_user_card.sql  009_plant_user.sql  010_seed_system_plants.sql  011_dedupe_system_plants.sql  012_luz_logs.sql  013_add_is_system_flag.sql  014_hortas_unique_owner_plant.sql  RODAR DEPOIS DE CRIAR PLANTAS.sql
minihorta/: minihorta.ino
src/: auth.rs  db.rs  errors.rs  main.rs  models.rs  serial.rs  state.rs
src/routes/: admin.rs  auth.rs  dashboard.rs  db_hortas_patch.rs  hortas.rs  irrigation.rs  mod.rs  plants.rs  sensors.rs  util.rs  ws.rs
static/: index.html  index2.html
